# context-compression

./: .editorconfig  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yml  test_suite.yml
conf/: default.yaml
conf/accelerate/: deepspeed_multi_gpu.yaml  multi_gpu.yaml  multi_gpu_fp16.yaml  multi_gpu_sharded.yaml  single_gpu.yaml
conf/custom_datasets/: govreport_custom.yaml  hotpot_qa_custom.yaml  lcc_custom.yaml  multifield_qa_custom.yaml  multinews_custom.yaml  musique_qa_custom.yaml  narrative_qa_custom.yaml  passage_count_custom.yaml  passage_retrieval.yaml  qasper_qa_custom.yaml  qmsum_custom.yaml  repobench_custom.yaml  sam_sum_custom.yaml  squad_v1.yaml  squad_v2.yaml  squad_v2_for_custom_lm.yaml  squad_v2_for_llama.yaml  squad_v2_for_llama_custom.yaml  squad_v2_for_seq2seq.yaml  trec_custom.yaml  trivia_qa_custom.yaml  wikimultihop_qa_custom.yaml
conf/experiments/: finetune_t5_qa_lm_squad.yaml  finetune_t5_qa_squad.yaml
conf/experiments_longbench_code/: evaluate_llama_compress_zeroshot_lcc.yaml  evaluate_llama_compress_zeroshot_repobench.yaml  evaluate_llmlingua_compress_zeroshot_lcc.yaml  evaluate_llmlingua_compress_zeroshot_repobench.yaml  evaluate_llmlingua_mistral_compress_zeroshot_lcc.yaml  evaluate_llmlingua_mistral_compress_zeroshot_repobench.yaml  evaluate_mistral_compress_zeroshot_lcc.yaml  evaluate_mistral_compress_zeroshot_repobench.yaml
docker/: Dockerfile
scripts/: finetune_squad_v2_lm_qa.sh  finetune_squad_v2_qa.sh
(+275 files in other folders)
