[metadata]
name = context-compression
description = A new awesome project.
url = https://github.com/anonymous/context-compression
long_description = file: README.md
author = anonymous
author_email = anonymous
keywords = python
license = MIT Licence

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
install_requires =
    nn-template-core==0.4.*
    anypy==0.0.*

    # Add project specific dependencies
    # Stuff easy to break with updates
    lightning==2.0.*
    torchmetrics==1.0.*
    hydra-core==1.3.*
    hydra-colorlog
    wandb
    streamlit
    # hydra-joblib-launcher

    # Stable stuff usually backward compatible
    rich
    dvc
    python-dotenv
    matplotlib
    stqdm

[options.packages.find]
where=src

[options.package_data]
* = *.txt, *.md

[options.extras_require]
docs =
    mkdocs
    mkdocs-material
    mike

test =
    pytest
    pytest-cov

dev =
    black
    flake8
    isort
    pre-commit
    bandit
    %(test)s
    %(docs)s
